--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cameron-fuller",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/CameronFullerDev/CameronFullerDev.github.io",
+  "homepage": "https://cameron-fuller.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
