--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18.2.22",
     "bootstrap": "^4.5.0",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
@@ -19,8 +15,7 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-social-icons": "^4.1.0",
-    "typescript": "^5.4.3"
+    "react-social-icons": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
